# rivi-std

./: Cargo.toml  README.md  flake.nix
benches/: lib_bench.rs
examples/: iota.rs  reduce.rs
src/: lib.rs  lib_test.rs
src/spirv/iota/: indexgen.msl  indexgen.s  indexgen.spv
src/spirv/reduce/: reduce.msl  reduce.s  reduce.spv
src/spirv/reduce/float/: reduce.s  reduce.spv
src/spirv/reduce/vec4/: reduce.spv
