[package]
name = "rivi-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv = "0.11.0"

[dev-dependencies]
rivi-loader = { git = "https://github.com/periferia-labs/rivi-loader", branch = "ramp" }